--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="Progress-container"></div>
+        <div class="progress" id="progrees"></div>
+        <div class="circle active">1</div>
+        <div class="circle">2</div>
+        <div class="circle">3</div>
+        <div class="circle">4</div>
+    </div>
+    <button class="btn" id="prev" disabled>Prev</button>
+    <button class="btn" id="prev" disabled>Next</button>
 </body>
 </html>
