--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="Progress-container"></div>
+        <div class="progress-container"></div>
         <div class="progress" id="progrees"></div>
         <div class="circle active">1</div>
         <div class="circle">2</div>
